creating user account along with employee, UI changes, changed password hashing algorithm to sha256, fixed demo data to create valid emails
